objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Div__c</fullName>
        <label>Division</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Division 1</fullName>
                </value>
                <value>
                    <fullName>Division 2</fullName>
                </value>
                <value>
                    <fullName>Division 3</fullName>
                </value>
                <value>
                    <fullName>Division 5</fullName>
                </value>
                <value>
                    <fullName>Division 6</fullName>
                </value>
                <value>
                    <fullName>Division 7</fullName>
                </value>
                <value>
                    <fullName>Division 8</fullName>
                </value>
                <value>
                    <fullName>Division 10</fullName>
                </value>
                <value>
                    <fullName>National Level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Event_Summary__c</fullName>
        <description>Provide information on the overall success of the Campaign as well as blockers and issues and other items that may have come up to help drive the success of future Campaigns.</description>
        <label>Post Event Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <description>Source System field used for Data Migration.</description>
        <label>Source System</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Product__c</fullName>
        <label>Sub Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>